# cardbot

./: .gitignore  Cargo.toml  README.md
cardctl/: Cargo.toml
cardctl/src/: interface.rs  main.rs
cardctl/src/interface/: moxfield.rs
db/: README.md  docker-compose.yml  env.sample
db/docker-mysql-initdb.d/: 100_cardbot_moxfield.sql
moxfield/: Cargo.toml
moxfield/src/: card.rs  deck.rs  error.rs  lib.rs
scryfall/: Cargo.toml
scryfall/src/: lib.rs
