[package]
name = "cardctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
moxfield = { path = "../moxfield" }
reqwest = "0.11.20"
scryfall = { path = "../scryfall" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["preserve_order"] }
tokio = { version = "1.32.0", features = ["full"] }
