[package]
name = "scryfall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["serde_derive", "derive"] }
serde_json = { version = "1.0.105", features = ["preserve_order", "indexmap"] }
